# SortingAlgs

./: CMakeLists.txt  CMakePresets.json
SortingAlgs/: CMakeLists.txt
SortingAlgs/include/: Helpers.h  MergeSort.h  SortingAlgs.h  xmalloc.h
SortingAlgs/src/: Helpers.cpp  MergeSort.cpp  SortingAlgs.cpp  xmalloc.cpp
